# genomix-cli

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  demo.tape  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: architecture.md  commands.md
genomix/: __init__.py  cli.py  commands.py  config.py  errors.py  gene_db.py  output.py  report.py  runtime.py  tui.py  tui_renderer.py
genomix/agent/: context_compressor.py  loop.py  prompt_builder.py  session_store.py
genomix/project/: manager.py  setup_wizard.py
genomix/providers/: __init__.py  base.py  claude.py  openai_provider.py  opencode.py
genomix/skills/: __init__.py  loader.py  registry.py
genomix/swarm/: manager.py
genomix/tools/: file_tools.py  mcp_bridge.py  mcp_manager.py  registry.py  vcf_tools.py
mcp_servers/: base_biotool.py  base_database.py  response_extractors.py
mcp_servers/biotools/: blast_server.py  bwa_server.py  fastqc_server.py  gatk_server.py  samtools_server.py
mcp_servers/databases/: alphafold_server.py  clinvar_server.py  cosmic_server.py  dbsnp_server.py  ensembl_server.py  gnomad_server.py  interpro_server.py  ncbi_server.py  omim_server.py  pdb_server.py  pharmgkb_server.py  pubmed_server.py  uniprot_server.py
tests/: conftest.py
tests/fixtures/: tiny.fasta  tiny.fastq  tiny.vcf
tests/integration/: test_live_database_smoke.py  test_ncbi_server.py  test_samtools_server.py
tests/unit/: test_agent_loop.py  test_claude_provider.py  test_cli.py  test_cli_noninteractive.py  (+18 more)
(+31 files in other folders)
