[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genomix-cli"
version = "0.1.0"
description = "AI-powered CLI for DNA sequence and genome analysis"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Genomix Contributors" }]
keywords = ["genomics", "bioinformatics", "dna", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "prompt-toolkit>=3.0",
    "anthropic>=0.40",
    "openai>=1.50",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rich>=13.0",
    "mcp>=1.0",
]

[project.scripts]
genomix = "genomix.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["genomix", "mcp_servers"]

[tool.hatch.build.targets.wheel.force-include]
"skills" = "genomix/builtin_skills"

[tool.pytest.ini_options]
testpaths = ["tests"]
